ansible/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    namespace: default
spec:
    replicas: 1
    selector:
        matchLabels:
            app: app
    template:
        metadata:
            labels:
                app: app

        annotations:
            prometheus.io/scrape: "true"
            prometheus.io/port: "3000"
            loki.enable: "true"

        spec:
            containers:
                - name: app
                  image: ghcr.io/nathanviaud/tachbleau@sha256:10ffc5735fb061ee920a417b0696441016b1e4bda1d16ab6383ca0fd15bd2da0
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 3000
                  resources:
                      limits:
                      memory: "512Mi"
                      cpu: "500m"
                      requests:
                          memory: "256Mi"
                          cpu: "250m"
