ansible/grafana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: grafana
    namespace: monitoring
spec:
    replicas: 1
    selector:
        matchLabels:
            app: grafana
    template:
        metadata:
            labels:
                app: grafana
        spec:
            containers:
                - name: grafana
                  image: grafana/grafana:latest
                  ports:
                      - containerPort: 3000
                  resources:
                      limits:
                          memory: "256Mi"
                          cpu: "250m"
                      requests:
                          memory: "128Mi"
                          cpu: "125m"
