ansible/prometheus-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: prometheus-server
    namespace: monitoring
spec:
    replicas: 1
    selector:
        matchLabels:
            app: prometheus-server
    template:
        metadata:
            labels:
                app: prometheus-server
        spec:
            containers:
                - name: prometheus
                  image: prom/prometheus
                  ports:
                      - containerPort: 9090
                  resources:
                      limits:
                          memory: "512Mi"
                          cpu: "500m"
                      requests:
                          memory: "256Mi"
                          cpu: "250m"
                  volumeMounts:
                      - name: config-volume
                        mountPath: /etc/prometheus
            volumes:
                - name: config-volume
                  configMap:
                      name: prometheus-server-conf
                      defaultMode: 420
