ansible/app-service.yml
apiVersion: v1
kind: Service
metadata:
    name: app
    namespace: default
spec:
    selector:
        app: app
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
    type: LoadBalancer
