ansible/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
    name: grafana-service
    namespace: monitoring
spec:
    selector:
        app: grafana
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
    type: LoadBalancer
