ansible/loki-service.yml
apiVersion: v1
kind: Service
metadata:
    name: loki
    namespace: default
spec:
    ports:
        - port: 3100
          protocol: TCP
          targetPort: 3100
    selector:
        app: loki
