ansible/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
    name: mongo-service
    namespace: default
spec:
    selector:
        app: mongo
    ports:
        - protocol: TCP
          port: 27017
          targetPort: 27017
    type: ClusterIP
