ansible/node-exporter-service.yml
apiVersion: v1
kind: Service
metadata:
    name: node-exporter
    namespace: monitoring
spec:
    selector:
        app: node-exporter
    ports:
        - protocol: TCP
          port: 9100
          targetPort: 9100
    type: LoadBalancer
