ansible/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
    name: prometheus-service
    namespace: monitoring
spec:
    selector:
        app: prometheus-server
    ports:
        - protocol: TCP
          port: 9090
          targetPort: 9090
    type: LoadBalancer
