ansible/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: app
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
        - host: tachbleau.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: app
                            port:
                                number: 3000
